# CodeVox

./: .env.example  .eslintrc.cjs  .gitignore  .prettierrc.cjs  CHANGELOG.md  LICENSE  README.md  READY_TO_BEGIN.md  envs.json  envs_example.json  get_recent_workspaces.py  package-lock.json  package.json  prd.txt  pyproject.toml  run.sh  tsconfig.json  turbo.json
__MACOSX/voice-demo-hackathon/: ._demo_podcast.py
__MACOSX/voice-demo-hackathon/voices/: ._grant.m4a  ._steve-jobs.m4a
client/: assistant.py  audio.py  main.py  mcp_client.py
client/macos/App/: ClaudeApp.swift
client/macos/Models/: MCPTool.swift  ProjectItem.swift
client/macos/Services/: AppDependencyContainer.swift  AudioCaptureService.swift  HotkeyManager.swift  MCPClientService.swift
client/macos/UI/Agent/: AgentAvatarView.swift  AgentFloatingView.swift  AgentWindowController.swift
client/macos/UI/Dashboard/: ContentView.swift  ProjectDetailView.swift  SidebarView.swift
examples/voice-demo/: .env.example  .gitignore  HTTPS_SETUP.md  README.md  SETUP.md  package.json  server.ts  tsconfig.json
examples/voice-demo/src/: config.ts  routes.ts  state.ts  utils.ts
server/: __init__.py  config.py  engine.py  github_integration.py  main.py
src/: __init__.py  claude.py  config.py  discord_client.py  environment.py  github.py  main.py  pr.py  process.py
tmp/voice-demo-hackathon/: demo.py  demo_podcast.py
tmp/voice-demo-hackathon/voices/: grant.m4a
tmp/xai-voice-examples-main/: .gitignore  LICENSE  README.md
tmp/xai-voice-examples-main/examples/: README.md
tmp/xai-voice-examples-main/examples/agent/: README.md
voice-demo-hackathon/voices/: steve-jobs.m4a
voice_client/: QUICKSTART.md  README.md  README_SETUP.md  TROUBLESHOOTING.md  example_usage.py  requirements.txt  run.sh  setup.sh  simple_test.py  test_components.py  text_mode_demo.py  voice_assistant.py
xai-voice-examples-main/: foo.py
xai-voice-examples-main/examples/tts/: README.md
(+92 files in other folders)
