[project]
name = "claude-code-mcp"
version = "3.0.0"
description = "Autonomous MCP server with auto-discovery and voice assistant"
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Claude Code MCP Team"}]

dependencies = [
    # Core server
    "fastmcp>=0.1.0",
    "uvicorn>=0.30.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "structlog>=24.0.0",
    "aiohttp>=3.9.0",
    "wsproto>=1.2.0",
    "psutil>=5.9.0",
    
    # Voice client
    "typer>=0.12.0",
    "pyaudio>=0.2.14",
]

[project.optional-dependencies]
claude = ["claude-agent-sdk"]
dev = ["pytest", "ruff", "mypy"]

[project.scripts]
mcp-server = "server.main:main"
voice = "client.main:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["server", "client"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]
